src/input/css/styles/breeze/delegate.css
/*
 * SPDX-License-Identifier: BSD-2-Clause
 * SPDX-FileCopyrightText: 2025 Arjen Hiemstra <ahiemstra@heimr.nl>
 */

/*
 * View delegates
 */

itemdelegate,
checkdelegate,
radiodelegate,
switchdelegate,
swipedelegate
{
    padding: var(--large-spacing);
    inset: var(--small-spacing);
    spacing: var(--small-spacing);
    width: var(--icon-size-medium);
    height: var(--icon-size-medium);

    border-radius: var(--corner-radius);

    icon-size: var(--icon-size-smallmedium);

    layout-alignment: content fill center 0;

    color: var(--window-text-color);

    &.useAlternateBackgroundColor
    {
        background-color: var(--window-background-alternate-color);
    }

    &:hovered
    {
        border: 1px solid var(--highlight-color);
        background-color: var(--window-highlight-color);
    }

    &:pressed,
    &:highlighted
    {
        border: 1px solid var(--highlight-color);
        background-color: var(--highlight-color);
        color: var(--highlight-text-color);
    }

    &:disabled {
        color: var(--window-disabled-text-color);
        background-color: transparent;
        border: none;
    }

    &[display="text-under-icon"]
    {
        text-alignment-vertical: stack;
        icon-alignment-vertical: stack;
        icon-size: var(--icon-size-medium);
        width: var(--icon-size-large);
        height: var(--icon-size-large);
    }

    indicator
    {
        layout-alignment-container: content;
        layout-alignment-order: -1;
    }
}

